@@ -1,6 +1,4 @@
 
-* fitting (Lev-Mar): a better way of handling singular matrix error
-
 * FFT data transformation using FFTW library,
   fft[-inv]-xx, where xx is re, im, amp, e.g. @n = fft-re(@3)
 
@@ -76,25 +74,9 @@
                        http://dx.doi.org/10.1002/cem.1005
                        http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2631518/
 
-* fitting: consider using 3rd-party library for nonlinear fitting/optimization.
-  The list of libraries in this category:
-    NLopt: http://ab-initio.mit.edu/wiki/index.php/NLopt
-    ALGLIB: http://www.alglib.net/ (lsfitcreatewfg)
-    MINUIT
-    COOOL: http://coool.mines.edu/ 
-    GAUL: http://gaul.sourceforge.net/, 
-    WNLIB: http://www.willnaylor.com/wnlib.html
-    GSL and 3rd-party extensions to GSL,
-    netlib: http://www.netlib.org/ 
-    OOL: http://OOL.sf.net, 
-    scitbx::lbfgs http://cctbx.sourceforge.net/
-    http://sal.jyu.fi/B/3/index.shtml, 
-    http://coin-or.org
-    http://www-unix.mcs.anl.gov/otc/Guide/faq/nonlinear-programming-faq.html 
-    levmar: http://www.ics.forth.gr/~lourakis/levmar/
-    OpenOpt: http://openopt.org/
-    http://www.applied-mathematics.net/optimization/rosenbrock.html
-    MPFIT: http://www.physics.wisc.edu/~craigm/idl/cmpfit.html
+* fitting: consider using NLopt for alternative optimization methods
+  (http://ab-initio.mit.edu/wiki/index.php/NLopt) and a library for
+  Genetic Algorithms.
 
 * fitting: in addition to the least squares fit, add so-called robust fit 
   (it is called robust fit in the Numerical Recipes book), i.e. optimize
